# finance_research_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DCF_Skill_ExcelGraph_Logbook.md  README.md  Valuation_Agent_Logbook_ExcelGraph.xlsx  Valuation_Template_TTM_TSM_RD_Lease_BankStyle_ExcelGraph_Logbook.xlsx  phase_v1.md  pyproject.toml  us_stocks_valuation_agent_excelgraph_prd_system_design.md  v1_data_service.excalidraw
backend/: Dockerfile  README.md
docs/: README.md
docs/adr/: 0001-v1-spreadsheet-engine-google-sheets.md  0002-v1-llm-provider-gemini-3.md
docs/architecture/: v1-data-service-fields-and-sources.md  v1-langgraph-orchestration-2026-02-15.md  v1-repository-layout.md  v1-skill-pack-implementation-2026-02-15.md  v1-tool-stack-implementation-2026-02-15.md
docs/runbooks/: backend-cloud-run-deployment-memory-2026-03-04.md  v1-bootstrap-checklist.md
docs/system_design/: diagram_manifest.json  (+1 more)
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  (+2 more)
infographics/: README.md  package-lock.json  package.json
scripts/: GOOGLE_SHEETS_SMOKE_TEST_SETUP.md  build_canonical_dataset.py  google_sheets_smoke_test.py  refresh_google_oauth_token.py  run_valuation_from_canonical_dataset.py  smoke_test_alpha_vantage_corporate_actions.py  smoke_test_alpha_vantage_transcripts.py  smoke_test_common.py  smoke_test_finnhub.py  smoke_test_fred.py  smoke_test_gemini_langgraph.py  smoke_test_langgraph_runner.py  smoke_test_sec_edgar.py  smoke_test_tavily.py  update_template_phase_v1.py  upsert_template_named_ranges.py
tests/: README.md
(+148 files in other folders)
